--- a/src/Module 3/Identifying & Measuring Data Quality Issues/Ques_13.ipynb
+++ b/src/Module 3/Identifying & Measuring Data Quality Issues/Ques_13.ipynb
@@ -2,175 +2,119 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completeness Score: 0.80\n",
-      "Uniqueness Score: 0.80\n",
-      "Consistency Score: 1.00\n",
-      "Overall Data Quality Score: 0.53\n",
+      "Customer Data Quality Metrics:\n",
+      " {'completeness': np.float64(0.8), 'uniqueness': np.float64(0.8), 'consistency': np.float64(1.0)}\n",
       "\n",
-      "Improvement Suggestions: Fill in missing 'name' or 'email' fields., Remove duplicate emails., Standardize name format to ensure consistency.\n",
-      "Accuracy Score: 1.00\n",
-      "Timeliness Score: 0.60\n",
-      "Integrity Score: 1.00\n",
-      "Overall Data Quality Score: 0.87\n",
+      "Sales Data Quality Metrics:\n",
+      " {'completeness': np.float64(0.8), 'uniqueness': np.float64(1.0), 'consistency': np.float64(1.0)}\n",
       "\n",
-      "Improvement Suggestions: Improve shipping timeliness for orders.\n",
-      "Validity Score: 1.00\n",
-      "Precision Score: 1.00\n",
-      "Accessibility Score: 1.00\n",
-      "Overall Data Quality Score: 1.00\n",
-      "\n",
-      "Improvement Suggestions: \n"
+      "Employee Registry Data Quality Metrics:\n",
+      " {'completeness': np.float64(0.8), 'uniqueness': np.float64(0.8), 'consistency': np.float64(1.0)}\n"
      ]
     }
    ],
    "source": [
-    "# Data Quality Metrics & Scoring Examples\n",
-    "\n",
-    "# Task 1:\n",
-    "# Assign scores to a customer dataset based on completeness, uniqueness, and consistency.\n",
-    "# Analyze the overall data quality score and identify areas for improvement.\n",
     "import pandas as pd\n",
     "\n",
-    "# Sample customer dataset\n",
+    "# ---------- Utility Functions ----------\n",
+    "\n",
+    "def validate_columns(df, columns):\n",
+    "    \"\"\"Check if required columns exist in the DataFrame.\"\"\"\n",
+    "    return all(col in df.columns for col in columns)\n",
+    "\n",
+    "def calculate_completeness(df, columns):\n",
+    "    if not validate_columns(df, columns):\n",
+    "        return None\n",
+    "    return 1 - df[columns].isnull().mean().mean()\n",
+    "\n",
+    "def calculate_uniqueness(df, column):\n",
+    "    if column not in df.columns:\n",
+    "        return None\n",
+    "    return 1 - df[column].duplicated().mean()\n",
+    "\n",
+    "def calculate_consistency(df, column, pattern=None):\n",
+    "    if column not in df.columns:\n",
+    "        return None\n",
+    "    if pattern:\n",
+    "        return df[column].str.match(pattern).mean()\n",
+    "    # Simple consistency: check if non-null values have similar structure\n",
+    "    return df[column].dropna().apply(lambda x: isinstance(x, str)).mean()\n",
+    "\n",
+    "def quality_summary(df, metrics_config):\n",
+    "    \"\"\"Compute data quality metrics for a dataset using config.\"\"\"\n",
+    "    summary = {}\n",
+    "    for metric, config in metrics_config.items():\n",
+    "        try:\n",
+    "            if metric == 'completeness':\n",
+    "                summary[metric] = calculate_completeness(df, config)\n",
+    "            elif metric == 'uniqueness':\n",
+    "                summary[metric] = calculate_uniqueness(df, config)\n",
+    "            elif metric == 'consistency':\n",
+    "                summary[metric] = calculate_consistency(df, config)\n",
+    "        except Exception as e:\n",
+    "            summary[metric] = f\"Error: {str(e)}\"\n",
+    "    return summary\n",
+    "\n",
+    "# ---------- Dataset 1: Customer Data ----------\n",
+    "\n",
     "customer_data = pd.DataFrame({\n",
     "    'customer_id': [1, 2, 3, 4, 5],\n",
-    "    'name': ['John Doe', 'Jane Smith', 'Alice Johnson', None, 'Bob Brown'],\n",
-    "    'email': ['john@example.com', 'jane@example.com', None, 'bob@example.com', 'bob@example.com']\n",
+    "    'email': ['a@example.com', 'b@example.com', None, 'd@example.com', 'd@example.com'],\n",
+    "    'name': ['Alice', 'Bob', 'Charlie', None, 'Eve']\n",
     "})\n",
     "\n",
-    "# Completeness: Check for missing values in 'name' and 'email' columns\n",
-    "completeness_score = 1 - (customer_data[['name', 'email']].isnull().mean().mean())  # Mean percentage of missing values\n",
+    "customer_config = {\n",
+    "    'completeness': ['email', 'name'],\n",
+    "    'uniqueness': 'email',\n",
+    "    'consistency': 'email'\n",
+    "}\n",
     "\n",
-    "# Uniqueness: Check for duplicate 'email' values\n",
-    "uniqueness_score = 1 - (customer_data['email'].duplicated().mean())  # Proportion of duplicated emails\n",
+    "customer_quality = quality_summary(customer_data, customer_config)\n",
     "\n",
-    "# Consistency: Check for inconsistent names (e.g., names with multiple parts)\n",
-    "consistency_score = customer_data['name'].str.contains(r'\\s').mean()  # Check if there is more than one part in the name\n",
+    "# ---------- Dataset 2: Sales Data ----------\n",
     "\n",
-    "# Calculate overall data quality score (average of completeness, uniqueness, and consistency)\n",
-    "overall_score = (completeness_score + uniqueness_score + (1 - consistency_score)) / 3\n",
-    "\n",
-    "# Display results\n",
-    "print(f\"Completeness Score: {completeness_score:.2f}\")\n",
-    "print(f\"Uniqueness Score: {uniqueness_score:.2f}\")\n",
-    "print(f\"Consistency Score: {consistency_score:.2f}\")\n",
-    "print(f\"Overall Data Quality Score: {overall_score:.2f}\")\n",
-    "\n",
-    "# Suggestions for improvement\n",
-    "improvement_suggestions = []\n",
-    "if completeness_score < 0.9:\n",
-    "    improvement_suggestions.append(\"Fill in missing 'name' or 'email' fields.\")\n",
-    "if uniqueness_score < 0.9:\n",
-    "    improvement_suggestions.append(\"Remove duplicate emails.\")\n",
-    "if consistency_score > 0.5:\n",
-    "    improvement_suggestions.append(\"Standardize name format to ensure consistency.\")\n",
-    "\n",
-    "print(f\"\\nImprovement Suggestions: {', '.join(improvement_suggestions)}\")\n",
-    "\n",
-    "# Sample dataset for an online shop\n",
-    "shop_data = pd.DataFrame({\n",
-    "    'order_id': [101, 102, 103, 104, 105],\n",
-    "    'product_name': ['Laptop', 'Tablet', 'Phone', 'Headset', 'Monitor'],\n",
-    "    'price': [1200, 500, 700, 100, 300],\n",
-    "    'order_date': ['2025-01-01', '2025-01-02', '2025-01-03', '2025-01-02', '2025-01-05'],\n",
-    "    'shipped': [True, True, False, True, True]\n",
+    "sales_data = pd.DataFrame({\n",
+    "    'transaction_id': [1001, 1002, 1003, 1004, 1005],\n",
+    "    'transaction_date': ['2024-01-01', None, '2024-01-03', '2024-01-04', '2024-01-05'],\n",
+    "    'amount': [100, 200, 300, 400, 500]\n",
     "})\n",
     "\n",
-    "# Accuracy: Check if all prices are positive numbers\n",
-    "accuracy_score = (shop_data['price'] > 0).mean()\n",
+    "sales_config = {\n",
+    "    'completeness': ['transaction_date'],\n",
+    "    'uniqueness': 'transaction_id',\n",
+    "    'consistency': 'transaction_date'\n",
+    "}\n",
     "\n",
-    "# Timeliness: Check if orders are shipped in time (e.g., within a week)\n",
-    "shop_data['order_date'] = pd.to_datetime(shop_data['order_date'])\n",
-    "timeliness_score = ((shop_data['shipped'] & (shop_data['order_date'] < pd.Timestamp('2025-01-04'))).mean())\n",
+    "sales_quality = quality_summary(sales_data, sales_config)\n",
     "\n",
-    "# Integrity: Check for missing values in essential columns (product_name, price)\n",
-    "integrity_score = 1 - (shop_data[['product_name', 'price']].isnull().mean().mean())  # Proportion of missing essential data\n",
+    "# ---------- Dataset 3: Employee Registry ----------\n",
     "\n",
-    "# Calculate overall data quality score (average of accuracy, timeliness, and integrity)\n",
-    "overall_score = (accuracy_score + timeliness_score + integrity_score) / 3\n",
-    "\n",
-    "# Display results\n",
-    "print(f\"Accuracy Score: {accuracy_score:.2f}\")\n",
-    "print(f\"Timeliness Score: {timeliness_score:.2f}\")\n",
-    "print(f\"Integrity Score: {integrity_score:.2f}\")\n",
-    "print(f\"Overall Data Quality Score: {overall_score:.2f}\")\n",
-    "\n",
-    "# Suggestions for improvement\n",
-    "improvement_suggestions = []\n",
-    "if accuracy_score < 0.9:\n",
-    "    improvement_suggestions.append(\"Ensure all product prices are valid positive numbers.\")\n",
-    "if timeliness_score < 0.9:\n",
-    "    improvement_suggestions.append(\"Improve shipping timeliness for orders.\")\n",
-    "if integrity_score < 0.9:\n",
-    "    improvement_suggestions.append(\"Fill in missing values for product_name and price.\")\n",
-    "\n",
-    "print(f\"\\nImprovement Suggestions: {', '.join(improvement_suggestions)}\")\n",
-    "\n",
-    "# Sample financial dataset\n",
-    "financial_data = pd.DataFrame({\n",
-    "    'transaction_id': [101, 102, 103, 104, 105],\n",
-    "    'transaction_amount': [5000.50, 2000.00, 15000.75, 3000.25, 12500.60],\n",
-    "    'transaction_date': ['2025-01-01', '2025-01-02', '2025-01-03', '2025-01-02', '2025-01-05'],\n",
-    "    'account_id': [1, 2, 3, 4, 5]\n",
+    "employee_data = pd.DataFrame({\n",
+    "    'employee_id': [1, 2, 3, 4, 5],\n",
+    "    'department': ['HR', 'IT', None, 'Finance', 'HR'],\n",
+    "    'email': ['x@corp.com', 'y@corp.com', 'z@corp.com', 'w@corp.com', 'x@corp.com']\n",
     "})\n",
     "\n",
-    "# Validity: Check if all transaction amounts are positive\n",
-    "validity_score = (financial_data['transaction_amount'] > 0).mean()\n",
+    "employee_config = {\n",
+    "    'completeness': ['department'],\n",
+    "    'uniqueness': 'email',\n",
+    "    'consistency': 'department'\n",
+    "}\n",
     "\n",
-    "# Precision: Check if the amounts are precise to two decimal places\n",
-    "precision_score = (financial_data['transaction_amount'] == financial_data['transaction_amount'].round(2)).mean()\n",
+    "employee_quality = quality_summary(employee_data, employee_config)\n",
     "\n",
-    "# Accessibility: Check if 'transaction_date' is in valid date format and non-null\n",
-    "financial_data['transaction_date'] = pd.to_datetime(financial_data['transaction_date'], errors='coerce')\n",
-    "accessibility_score = 1 - financial_data['transaction_date'].isna().mean()\n",
+    "# ---------- Final Output ----------\n",
     "\n",
-    "# Calculate overall data quality score (average of validity, precision, and accessibility)\n",
-    "overall_score = (validity_score + precision_score + accessibility_score) / 3\n",
-    "\n",
-    "# Display results\n",
-    "print(f\"Validity Score: {validity_score:.2f}\")\n",
-    "print(f\"Precision Score: {precision_score:.2f}\")\n",
-    "print(f\"Accessibility Score: {accessibility_score:.2f}\")\n",
-    "print(f\"Overall Data Quality Score: {overall_score:.2f}\")\n",
-    "\n",
-    "# Suggestions for improvement\n",
-    "improvement_suggestions = []\n",
-    "if validity_score < 0.9:\n",
-    "    improvement_suggestions.append(\"Ensure all transaction amounts are positive.\")\n",
-    "if precision_score < 0.9:\n",
-    "    improvement_suggestions.append(\"Standardize transaction amount precision to two decimal places.\")\n",
-    "if accessibility_score < 0.9:\n",
-    "    improvement_suggestions.append(\"Ensure all transaction dates are valid and accessible.\")\n",
-    "\n",
-    "print(f\"\\nImprovement Suggestions: {', '.join(improvement_suggestions)}\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Task 2:\n",
-    "# Evaluate a dataset for an online shop using metrics such as accuracy, timeliness, and\n",
-    "# integrity. Calculate the data quality score and provide improvement suggestions.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Task 3:\n",
-    "# Perform a data quality assessment on a financial dataset, scoring it based on validity,\n",
-    "# precision, and accessibility. Review the results and propose corrective actions.\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(\"Customer Data Quality Metrics:\\n\", customer_quality)\n",
+    "print(\"\\nSales Data Quality Metrics:\\n\", sales_quality)\n",
+    "print(\"\\nEmployee Registry Data Quality Metrics:\\n\", employee_quality)\n"
    ]
   }
  ],
