--- a/src/Module 3/Identifying & Measuring Data Quality Issues/Ques_13.ipynb
+++ b/src/Module 3/Identifying & Measuring Data Quality Issues/Ques_13.ipynb
@@ -2,120 +2,169 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Customer Data Quality Metrics:\n",
-      " {'completeness': np.float64(0.8), 'uniqueness': np.float64(0.8), 'consistency': np.float64(1.0)}\n",
+      "🔹 Sample Dataset:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Email</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>alice@mail.com</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>bob@mail.com</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>bob@mail.com</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Eve</td>\n",
+       "      <td>eve@mail.com</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ID     Name           Email   Age\n",
+       "0  1.0    Alice  alice@mail.com  25.0\n",
+       "1  2.0      Bob    bob@mail.com  30.0\n",
+       "2  3.0  Charlie            None   NaN\n",
+       "3  4.0     None    bob@mail.com  22.0\n",
+       "4  NaN      Eve    eve@mail.com  29.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "Sales Data Quality Metrics:\n",
-      " {'completeness': np.float64(0.8), 'uniqueness': np.float64(1.0), 'consistency': np.float64(1.0)}\n",
+      "✅ Completeness (%):\n",
+      "ID       80.0\n",
+      "Name     80.0\n",
+      "Email    80.0\n",
+      "Age      80.0\n",
+      "dtype: float64\n",
       "\n",
-      "Employee Registry Data Quality Metrics:\n",
-      " {'completeness': np.float64(0.8), 'uniqueness': np.float64(0.8), 'consistency': np.float64(1.0)}\n"
+      "✅ Uniqueness (%):\n",
+      "ID       80.0\n",
+      "Name     80.0\n",
+      "Email    60.0\n",
+      "Age      80.0\n",
+      "dtype: float64\n",
+      "\n",
+      "✅ Validity of Age (0–120): 100.00%\n"
      ]
     }
    ],
    "source": [
+    "# Ques_13.ipynb\n",
+    "# Introduction to Data Quality Metrics & Scoring\n",
+    "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "# ---------- Utility Functions ----------\n",
-    "\n",
-    "def validate_columns(df, columns):\n",
-    "    \"\"\"Check if required columns exist in the DataFrame.\"\"\"\n",
-    "    return all(col in df.columns for col in columns)\n",
-    "\n",
-    "def calculate_completeness(df, columns):\n",
-    "    \n",
-    "    if not validate_columns(df, columns):\n",
-    "        return None\n",
-    "    return 1 - df[columns].isnull().mean().mean()\n",
-    "\n",
-    "def calculate_uniqueness(df, column):\n",
-    "    if column not in df.columns:\n",
-    "        return None\n",
-    "    return 1 - df[column].duplicated().mean()\n",
-    "\n",
-    "def calculate_consistency(df, column, pattern=None):\n",
-    "    if column not in df.columns:\n",
-    "        return None\n",
-    "    if pattern:\n",
-    "        return df[column].str.match(pattern).mean()\n",
-    "    # Simple consistency: check if non-null values have similar structure\n",
-    "    return df[column].dropna().apply(lambda x: isinstance(x, str)).mean()\n",
-    "\n",
-    "def quality_summary(df, metrics_config):\n",
-    "    \"\"\"Compute data quality metrics for a dataset using config.\"\"\"\n",
-    "    summary = {}\n",
-    "    for metric, config in metrics_config.items():\n",
-    "        try:\n",
-    "            if metric == 'completeness':\n",
-    "                summary[metric] = calculate_completeness(df, config)\n",
-    "            elif metric == 'uniqueness':\n",
-    "                summary[metric] = calculate_uniqueness(df, config)\n",
-    "            elif metric == 'consistency':\n",
-    "                summary[metric] = calculate_consistency(df, config)\n",
-    "        except Exception as e:\n",
-    "            summary[metric] = f\"Error: {str(e)}\"\n",
-    "    return summary\n",
-    "\n",
-    "# ---------- Dataset 1: Customer Data ----------\n",
-    "\n",
-    "customer_data = pd.DataFrame({\n",
-    "    'customer_id': [1, 2, 3, 4, 5],\n",
-    "    'email': ['a@example.com', 'b@example.com', None, 'd@example.com', 'd@example.com'],\n",
-    "    'name': ['Alice', 'Bob', 'Charlie', None, 'Eve']\n",
-    "})\n",
-    "\n",
-    "customer_config = {\n",
-    "    'completeness': ['email', 'name'],\n",
-    "    'uniqueness': 'email',\n",
-    "    'consistency': 'email'\n",
+    "# -------------------------------\n",
+    "# Step 1: Sample Dataset\n",
+    "# -------------------------------\n",
+    "data = {\n",
+    "    'ID': [1, 2, 3, 4, None],\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', None, 'Eve'],\n",
+    "    'Email': ['alice@mail.com', 'bob@mail.com', None, 'bob@mail.com', 'eve@mail.com'],\n",
+    "    'Age': [25, 30, np.nan, 22, 29]\n",
     "}\n",
     "\n",
-    "customer_quality = quality_summary(customer_data, customer_config)\n",
+    "df = pd.DataFrame(data)\n",
+    "print(\"🔹 Sample Dataset:\")\n",
+    "display(df)\n",
     "\n",
-    "# ---------- Dataset 2: Sales Data ----------\n",
+    "# -------------------------------\n",
+    "# Step 2: Completeness Metric\n",
+    "# -------------------------------\n",
+    "def completeness(df):\n",
+    "    return df.notnull().mean() * 100\n",
     "\n",
-    "sales_data = pd.DataFrame({\n",
-    "    'transaction_id': [1001, 1002, 1003, 1004, 1005],\n",
-    "    'transaction_date': ['2024-01-01', None, '2024-01-03', '2024-01-04', '2024-01-05'],\n",
-    "    'amount': [100, 200, 300, 400, 500]\n",
-    "})\n",
+    "# -------------------------------\n",
+    "# Step 3: Uniqueness Metric\n",
+    "# -------------------------------\n",
+    "def uniqueness(df):\n",
+    "    return df.nunique() / len(df) * 100\n",
     "\n",
-    "sales_config = {\n",
-    "    'completeness': ['transaction_date'],\n",
-    "    'uniqueness': 'transaction_id',\n",
-    "    'consistency': 'transaction_date'\n",
-    "}\n",
+    "# -------------------------------\n",
+    "# Step 4: Validity Check for Age\n",
+    "# -------------------------------\n",
+    "def validity_age(df):\n",
+    "    valid = df['Age'].between(0, 120).sum()\n",
+    "    total = df['Age'].notnull().sum()\n",
+    "    return (valid / total) * 100 if total > 0 else 0\n",
     "\n",
-    "sales_quality = quality_summary(sales_data, sales_config)\n",
+    "# -------------------------------\n",
+    "# Step 5: Display Results\n",
+    "# -------------------------------\n",
+    "print(\"\\n✅ Completeness (%):\")\n",
+    "print(completeness(df).round(2))\n",
     "\n",
-    "# ---------- Dataset 3: Employee Registry ----------\n",
+    "print(\"\\n✅ Uniqueness (%):\")\n",
+    "print(uniqueness(df).round(2))\n",
     "\n",
-    "employee_data = pd.DataFrame({\n",
-    "    'employee_id': [1, 2, 3, 4, 5],\n",
-    "    'department': ['HR', 'IT', None, 'Finance', 'HR'],\n",
-    "    'email': ['x@corp.com', 'y@corp.com', 'z@corp.com', 'w@corp.com', 'x@corp.com']\n",
-    "})\n",
-    "\n",
-    "employee_config = {\n",
-    "    'completeness': ['department'],\n",
-    "    'uniqueness': 'email',\n",
-    "    'consistency': 'department'\n",
-    "}\n",
-    "\n",
-    "employee_quality = quality_summary(employee_data, employee_config)\n",
-    "\n",
-    "# ---------- Final Output ----------\n",
-    "\n",
-    "print(\"Customer Data Quality Metrics:\\n\", customer_quality)\n",
-    "print(\"\\nSales Data Quality Metrics:\\n\", sales_quality)\n",
-    "print(\"\\nEmployee Registry Data Quality Metrics:\\n\", employee_quality)\n"
+    "print(f\"\\n✅ Validity of Age (0–120): {validity_age(df):.2f}%\")\n"
    ]
   }
  ],
