--- a/src/Module 3/Techniques to Improve Data Quality/Ques_8.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_8.ipynb
@@ -5,16 +5,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Question: Data Quality Automation Tools - Introduction to Great Expectations\n",
-    "# Description: Set up a simple Great Expectations check for missing values in a numeric column.\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
