--- a/src/Module 3/Techniques to Improve Data Quality/Ques_9.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_9.ipynb
@@ -2,19 +2,270 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔹 Sample Dataset with Missing Values:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>50000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>65000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>70000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>72000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>75000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID   Age  Salary\n",
+       "0   1  25.0   50000\n",
+       "1   2   NaN   60000\n",
+       "2   3  30.0   65000\n",
+       "3   4  22.0   70000\n",
+       "4   5   NaN   72000\n",
+       "5   6  27.0   75000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✅ Dataset After Predictive Imputation:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>50000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>60000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>65000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>70000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>72000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>75000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID   Age  Salary\n",
+       "0   1  25.0   50000\n",
+       "1   2  30.0   60000\n",
+       "2   3  30.0   65000\n",
+       "3   4  22.0   70000\n",
+       "4   5  22.0   72000\n",
+       "5   6  27.0   75000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Question: Predictive Imputation Using Machine Learning\n",
     "# Description: Use a simple predictive model to impute missing values in a column.\n",
-    "\n"
+    "\n",
+    "# Ques_9.ipynb\n",
+    "# Predictive Imputation Using Machine Learning\n",
+    "# Objective: Use a simple predictive model to impute missing values in a column\n",
+    "\n",
+    "# ----------------------------------------\n",
+    "# Step 1: Install necessary libraries\n",
+    "# ----------------------------------------\n",
+    "# Uncomment the next line if not already installed\n",
+    "# !pip install pandas scikit-learn\n",
+    "\n",
+    "# ----------------------------------------\n",
+    "# Step 2: Import Libraries\n",
+    "# ----------------------------------------\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# ----------------------------------------\n",
+    "# Step 3: Create Sample Dataset with Missing Values\n",
+    "# ----------------------------------------\n",
+    "data = {\n",
+    "    'ID': [1, 2, 3, 4, 5, 6],\n",
+    "    'Age': [25, None, 30, 22, None, 27],  # 'Age' column has missing values\n",
+    "    'Salary': [50000, 60000, 65000, 70000, 72000, 75000]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "print(\"🔹 Sample Dataset with Missing Values:\")\n",
+    "display(df)\n",
+    "\n",
+    "# ----------------------------------------\n",
+    "# Step 4: Prepare Data for Predictive Imputation\n",
+    "# ----------------------------------------\n",
+    "\n",
+    "# Step 4.1: Separate rows with missing 'Age' values\n",
+    "train_data = df[df['Age'].notnull()]\n",
+    "test_data = df[df['Age'].isnull()]\n",
+    "\n",
+    "# Step 4.2: Define the predictor (X) and target (y) for the model\n",
+    "X_train = train_data[['Salary']]  # Using 'Salary' to predict 'Age'\n",
+    "y_train = train_data['Age']\n",
+    "\n",
+    "# Step 4.3: Train a Decision Tree Regressor model\n",
+    "model = DecisionTreeRegressor(random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# ----------------------------------------\n",
+    "# Step 5: Predict Missing 'Age' Values\n",
+    "# ----------------------------------------\n",
+    "X_test = test_data[['Salary']]  # We will predict the 'Age' based on 'Salary'\n",
+    "predicted_ages = model.predict(X_test)\n",
+    "\n",
+    "# Step 5.1: Fill missing 'Age' values with predictions\n",
+    "df.loc[df['Age'].isnull(), 'Age'] = predicted_ages\n",
+    "\n",
+    "# ----------------------------------------\n",
+    "# Step 6: Display Imputed Dataset\n",
+    "# ----------------------------------------\n",
+    "print(\"\\n✅ Dataset After Predictive Imputation:\")\n",
+    "display(df)\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
