--- a/src/Module 3/Techniques to Improve Data Quality/Ques_8.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_8.ipynb
@@ -1,13 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
@@ -24,7 +16,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
