--- a/src/Module 3/Techniques to Improve Data Quality/Ques_9.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
     "# Step 6: Display Imputed Dataset\n",
     "# ----------------------------------------\n",
     "print(\"\\n✅ Dataset After Predictive Imputation:\")\n",
-    "display(df)\n"
+    "display(df)"
    ]
   }
  ],
