Added Ques_11 notebook - Handling Missing Data with imputation methods

--- a/src/Module 3/Techniques to Improve Data Quality/Ques_11.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_11.ipynb
@@ -2,27 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original Dataset:\n",
-      "    Name   Age   Salary Department\n",
+      "Original Data:\n",
+      "     Name   Age   Salary Department\n",
       "0  Alice  25.0  50000.0         HR\n",
       "1    Bob   NaN  60000.0         IT\n",
       "2    NaN  30.0      NaN    Finance\n",
       "3  David  22.0  45000.0        NaN\n",
-      "4    Eva   NaN  52000.0         IT\n",
-      "\n",
-      "Missing Values Per Column:\n",
-      "Name          1\n",
-      "Age           2\n",
-      "Salary        1\n",
-      "Department    1\n",
-      "dtype: int64\n"
+      "4    Eva   NaN  52000.0         IT\n"
      ]
     },
     {
@@ -40,112 +33,119 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Dataset after dropping rows with missing values:\n",
-      "    Name   Age   Salary Department\n",
+      "After Dropping Rows:\n",
+      "     Name   Age   Salary Department\n",
       "0  Alice  25.0  50000.0         HR\n",
       "\n",
-      "Dataset after filling missing values (mean for numeric, mode for categorical):\n",
-      "    Name        Age   Salary Department\n",
+      "After Filling (Mean/Mode):\n",
+      "     Name        Age   Salary Department\n",
       "0  Alice  25.000000  50000.0         HR\n",
       "1    Bob  25.666667  60000.0         IT\n",
       "2  Alice  30.000000  51750.0    Finance\n",
       "3  David  22.000000  45000.0         IT\n",
       "4    Eva  25.666667  52000.0         IT\n",
       "\n",
-      "Dataset after filling missing values (median for numeric, mode for categorical):\n",
-      "    Name   Age   Salary Department\n",
-      "0  Alice  25.0  50000.0         HR\n",
-      "1    Bob  25.0  60000.0         IT\n",
-      "2  Alice  30.0  51000.0    Finance\n",
-      "3  David  22.0  45000.0         IT\n",
-      "4    Eva  25.0  52000.0         IT\n",
-      "\n",
-      "Dataset after interpolation:\n",
-      "    Name   Age   Salary Department\n",
+      "After Interpolation:\n",
+      "     Name   Age   Salary Department\n",
       "0  Alice  25.0  50000.0         HR\n",
       "1    Bob  27.5  60000.0         IT\n",
       "2    NaN  30.0  52500.0    Finance\n",
       "3  David  22.0  45000.0        NaN\n",
       "4    Eva  22.0  52000.0         IT\n",
       "\n",
-      "✅ Data handling complete. Cleaned file saved as 'Q11_cleaned_data.csv'.\n"
+      "✅ Cleaned data saved to 'Q11_cleaned_data.csv'.\n"
      ]
     }
    ],
    "source": [
-    "# Ques_11.ipynb - Handling Missing Data\n",
+    "# Ques_11.ipynb - Handling Missing Data (Optimized & Modular)\n",
     "\n",
-    "# Step 1: Import required libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Step 2: Create a sample dataset with missing values\n",
-    "data = {\n",
-    "    'Name': ['Alice', 'Bob', np.nan, 'David', 'Eva'],\n",
-    "    'Age': [25, np.nan, 30, 22, np.nan],\n",
-    "    'Salary': [50000, 60000, np.nan, 45000, 52000],\n",
-    "    'Department': ['HR', 'IT', 'Finance', np.nan, 'IT']\n",
-    "}\n",
     "\n",
-    "df = pd.DataFrame(data)\n",
+    "# Function 1: Generate sample data with missing values\n",
+    "def generate_sample_data():\n",
+    "    data = {\n",
+    "        'Name': ['Alice', 'Bob', np.nan, 'David', 'Eva'],\n",
+    "        'Age': [25, np.nan, 30, 22, np.nan],\n",
+    "        'Salary': [50000, 60000, np.nan, 45000, 52000],\n",
+    "        'Department': ['HR', 'IT', 'Finance', np.nan, 'IT']\n",
+    "    }\n",
+    "    return pd.DataFrame(data)\n",
     "\n",
-    "# Display the original dataset\n",
-    "print(\"Original Dataset:\")\n",
-    "print(df)\n",
     "\n",
-    "# Step 3: Detect missing values\n",
-    "print(\"\\nMissing Values Per Column:\")\n",
-    "print(df.isnull().sum())\n",
+    "# Function 2: Visualize missing values\n",
+    "def visualize_missing(df):\n",
+    "    plt.figure(figsize=(8, 4))\n",
+    "    sns.heatmap(df.isnull(), cbar=False, cmap='viridis')\n",
+    "    plt.title(\"Missing Values Heatmap\")\n",
+    "    plt.show()\n",
     "\n",
-    "# Visualize missing values\n",
-    "plt.figure(figsize=(8, 4))\n",
-    "sns.heatmap(df.isnull(), cbar=False, cmap='viridis')\n",
-    "plt.title(\"Missing Values Heatmap\")\n",
-    "plt.show()\n",
     "\n",
-    "# Step 4: Drop rows with any missing values\n",
-    "df_dropna = df.dropna()\n",
-    "print(\"\\nDataset after dropping rows with missing values:\")\n",
-    "print(df_dropna)\n",
+    "# Function 3: Fill missing values (mean for numeric, mode for categorical)\n",
+    "def fill_missing_values(df):\n",
+    "    df = df.copy()\n",
+    "    num_cols = df.select_dtypes(include=[np.number]).columns\n",
+    "    cat_cols = df.select_dtypes(include=['object']).columns\n",
     "\n",
-    "# Step 5: Fill missing numeric values with mean\n",
-    "df_fill_mean = df.copy()\n",
-    "df_fill_mean['Age'].fillna(df['Age'].mean(), inplace=True)\n",
-    "df_fill_mean['Salary'].fillna(df['Salary'].mean(), inplace=True)\n",
+    "    df[num_cols] = df[num_cols].fillna(df[num_cols].mean())\n",
+    "    df[cat_cols] = df[cat_cols].fillna(df[cat_cols].mode().iloc[0])\n",
+    "    return df\n",
     "\n",
-    "# Fill categorical with mode\n",
-    "df_fill_mean['Name'].fillna(df['Name'].mode()[0], inplace=True)\n",
-    "df_fill_mean['Department'].fillna(df['Department'].mode()[0], inplace=True)\n",
     "\n",
-    "print(\"\\nDataset after filling missing values (mean for numeric, mode for categorical):\")\n",
-    "print(df_fill_mean)\n",
+    "# Function 4: Drop rows with any missing values\n",
+    "def drop_missing_rows(df):\n",
+    "    return df.dropna()\n",
     "\n",
-    "# Step 6: Fill missing numeric values with median\n",
-    "df_fill_median = df.copy()\n",
-    "df_fill_median['Age'].fillna(df['Age'].median(), inplace=True)\n",
-    "df_fill_median['Salary'].fillna(df['Salary'].median(), inplace=True)\n",
     "\n",
-    "# Fill categorical with mode again\n",
-    "df_fill_median['Name'].fillna(df['Name'].mode()[0], inplace=True)\n",
-    "df_fill_median['Department'].fillna(df['Department'].mode()[0], inplace=True)\n",
+    "# Function 5: Interpolate missing numeric data\n",
+    "def interpolate_missing(df):\n",
+    "    df = df.copy()\n",
+    "    for col in df.select_dtypes(include=[np.number]).columns:\n",
+    "        df[col] = df[col].interpolate()\n",
+    "    return df\n",
     "\n",
-    "print(\"\\nDataset after filling missing values (median for numeric, mode for categorical):\")\n",
-    "print(df_fill_median)\n",
     "\n",
-    "# Step 7: Interpolation (good for time series or ordered data)\n",
-    "df_interpolated = df.copy()\n",
-    "df_interpolated['Age'] = df_interpolated['Age'].interpolate()\n",
-    "df_interpolated['Salary'] = df_interpolated['Salary'].interpolate()\n",
+    "# Function 6: Chunked processing simulation (for large files)\n",
+    "def process_in_chunks(file_path, chunk_size=1000):\n",
+    "    chunks = pd.read_csv(file_path, chunksize=chunk_size)\n",
+    "    cleaned_chunks = []\n",
+    "    for chunk in chunks:\n",
+    "        cleaned_chunk = fill_missing_values(chunk)\n",
+    "        cleaned_chunks.append(cleaned_chunk)\n",
+    "    final_df = pd.concat(cleaned_chunks)\n",
+    "    return final_df\n",
     "\n",
-    "print(\"\\nDataset after interpolation:\")\n",
-    "print(df_interpolated)\n",
     "\n",
-    "# Step 8: Save cleaned dataset if needed\n",
-    "df_fill_mean.to_csv(\"Q11_cleaned_data.csv\", index=False)\n",
+    "# === Main Execution ===\n",
     "\n",
-    "print(\"\\n✅ Data handling complete. Cleaned file saved as 'Q11_cleaned_data.csv'.\")\n"
+    "# Step 1: Create or load data\n",
+    "df = generate_sample_data()\n",
+    "print(\"Original Data:\\n\", df)\n",
+    "\n",
+    "# Step 2: Visualize missing values\n",
+    "visualize_missing(df)\n",
+    "\n",
+    "# Step 3: Handle missing values using various methods\n",
+    "\n",
+    "# 3a. Drop rows with missing values\n",
+    "df_dropped = drop_missing_rows(df)\n",
+    "print(\"\\nAfter Dropping Rows:\\n\", df_dropped)\n",
+    "\n",
+    "# 3b. Fill missing values (mean/mode)\n",
+    "df_filled = fill_missing_values(df)\n",
+    "print(\"\\nAfter Filling (Mean/Mode):\\n\", df_filled)\n",
+    "\n",
+    "# 3c. Interpolation\n",
+    "df_interpolated = interpolate_missing(df)\n",
+    "print(\"\\nAfter Interpolation:\\n\", df_interpolated)\n",
+    "\n",
+    "# Step 4: Save the cleaned version\n",
+    "df_filled.to_csv(\"Q11_cleaned_data.csv\", index=False)\n",
+    "print(\"\\n✅ Cleaned data saved to 'Q11_cleaned_data.csv'.\")\n"
    ]
   }
  ],
