Added Ques_11 notebook - Handling Missing Data with imputation methods

--- a/src/Module 3/Techniques to Improve Data Quality/Ques_11.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_11.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original Data:\n",
-      "     Name   Age   Salary Department\n",
+      "🔹 Original Data:\n",
+      "    Name   Age   Salary Department\n",
       "0  Alice  25.0  50000.0         HR\n",
       "1    Bob   NaN  60000.0         IT\n",
       "2    NaN  30.0      NaN    Finance\n",
@@ -33,51 +33,59 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "After Dropping Rows:\n",
-      "     Name   Age   Salary Department\n",
+      "🔸 After Dropping Rows:\n",
+      "    Name   Age   Salary Department\n",
       "0  Alice  25.0  50000.0         HR\n",
       "\n",
-      "After Filling (Mean/Mode):\n",
-      "     Name        Age   Salary Department\n",
+      "🔸 After Filling (Mean/Mode):\n",
+      "    Name        Age   Salary Department\n",
       "0  Alice  25.000000  50000.0         HR\n",
       "1    Bob  25.666667  60000.0         IT\n",
       "2  Alice  30.000000  51750.0    Finance\n",
       "3  David  22.000000  45000.0         IT\n",
       "4    Eva  25.666667  52000.0         IT\n",
       "\n",
-      "After Interpolation:\n",
-      "     Name   Age   Salary Department\n",
+      "🔸 After Interpolation:\n",
+      "    Name   Age   Salary Department\n",
       "0  Alice  25.0  50000.0         HR\n",
       "1    Bob  27.5  60000.0         IT\n",
       "2    NaN  30.0  52500.0    Finance\n",
       "3  David  22.0  45000.0        NaN\n",
       "4    Eva  22.0  52000.0         IT\n",
       "\n",
-      "✅ Cleaned data saved to 'Q11_cleaned_data.csv'.\n"
+      "✅ Saved cleaned data to 'Q11_cleaned_data.csv'.\n"
      ]
     }
    ],
    "source": [
-    "# Ques_11.ipynb - Handling Missing Data (Optimized & Modular)\n",
+    "# Ques_11.ipynb - Advanced Missing Data Handling\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import concurrent.futures\n",
     "\n",
     "\n",
-    "# Function 1: Generate sample data with missing values\n",
-    "def generate_sample_data():\n",
-    "    data = {\n",
-    "        'Name': ['Alice', 'Bob', np.nan, 'David', 'Eva'],\n",
-    "        'Age': [25, np.nan, 30, 22, np.nan],\n",
-    "        'Salary': [50000, 60000, np.nan, 45000, 52000],\n",
-    "        'Department': ['HR', 'IT', 'Finance', np.nan, 'IT']\n",
-    "    }\n",
-    "    return pd.DataFrame(data)\n",
+    "# === Function 1: Load data with error handling ===\n",
+    "def load_data(file_path):\n",
+    "    try:\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        if df.empty:\n",
+    "            raise ValueError(\"Loaded DataFrame is empty.\")\n",
+    "        return df\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"❌ File not found. Please check the path.\")\n",
+    "        return pd.DataFrame()\n",
+    "    except pd.errors.EmptyDataError:\n",
+    "        print(\"❌ File is empty.\")\n",
+    "        return pd.DataFrame()\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Unexpected error: {e}\")\n",
+    "        return pd.DataFrame()\n",
     "\n",
     "\n",
-    "# Function 2: Visualize missing values\n",
+    "# === Function 2: Visualize missing values ===\n",
     "def visualize_missing(df):\n",
     "    plt.figure(figsize=(8, 4))\n",
     "    sns.heatmap(df.isnull(), cbar=False, cmap='viridis')\n",
@@ -85,7 +93,7 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "# Function 3: Fill missing values (mean for numeric, mode for categorical)\n",
+    "# === Function 3: Fill missing values ===\n",
     "def fill_missing_values(df):\n",
     "    df = df.copy()\n",
     "    num_cols = df.select_dtypes(include=[np.number]).columns\n",
@@ -96,12 +104,12 @@
     "    return df\n",
     "\n",
     "\n",
-    "# Function 4: Drop rows with any missing values\n",
+    "# === Function 4: Drop rows with any missing values ===\n",
     "def drop_missing_rows(df):\n",
     "    return df.dropna()\n",
     "\n",
     "\n",
-    "# Function 5: Interpolate missing numeric data\n",
+    "# === Function 5: Interpolate numeric data ===\n",
     "def interpolate_missing(df):\n",
     "    df = df.copy()\n",
     "    for col in df.select_dtypes(include=[np.number]).columns:\n",
@@ -109,43 +117,86 @@
     "    return df\n",
     "\n",
     "\n",
-    "# Function 6: Chunked processing simulation (for large files)\n",
-    "def process_in_chunks(file_path, chunk_size=1000):\n",
-    "    chunks = pd.read_csv(file_path, chunksize=chunk_size)\n",
-    "    cleaned_chunks = []\n",
-    "    for chunk in chunks:\n",
-    "        cleaned_chunk = fill_missing_values(chunk)\n",
-    "        cleaned_chunks.append(cleaned_chunk)\n",
-    "    final_df = pd.concat(cleaned_chunks)\n",
-    "    return final_df\n",
+    "# === Function 6: Chunked processing with memory efficiency ===\n",
+    "def process_in_chunks(file_path, chunk_size=1000, output_file=\"cleaned_output.csv\"):\n",
+    "    try:\n",
+    "        first_chunk = True\n",
+    "        for chunk in pd.read_csv(file_path, chunksize=chunk_size):\n",
+    "            cleaned_chunk = fill_missing_values(chunk)\n",
+    "            mode = 'w' if first_chunk else 'a'\n",
+    "            header = first_chunk\n",
+    "            cleaned_chunk.to_csv(output_file, mode=mode, header=header, index=False)\n",
+    "            first_chunk = False\n",
+    "        print(f\"✅ Cleaned chunks saved to '{output_file}'\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error during chunked processing: {e}\")\n",
     "\n",
     "\n",
-    "# === Main Execution ===\n",
+    "# === Optional: Multithreaded chunk processing (Advanced) ===\n",
+    "def async_chunk_processing(file_path, chunk_size=1000):\n",
+    "    try:\n",
+    "        chunks = list(pd.read_csv(file_path, chunksize=chunk_size))\n",
     "\n",
-    "# Step 1: Create or load data\n",
-    "df = generate_sample_data()\n",
-    "print(\"Original Data:\\n\", df)\n",
+    "        def process_chunk(chunk):\n",
+    "            return fill_missing_values(chunk)\n",
     "\n",
-    "# Step 2: Visualize missing values\n",
-    "visualize_missing(df)\n",
+    "        with concurrent.futures.ThreadPoolExecutor() as executor:\n",
+    "            results = list(executor.map(process_chunk, chunks))\n",
     "\n",
-    "# Step 3: Handle missing values using various methods\n",
+    "        return pd.concat(results, ignore_index=True)\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Async processing failed: {e}\")\n",
+    "        return pd.DataFrame()\n",
     "\n",
-    "# 3a. Drop rows with missing values\n",
-    "df_dropped = drop_missing_rows(df)\n",
-    "print(\"\\nAfter Dropping Rows:\\n\", df_dropped)\n",
     "\n",
-    "# 3b. Fill missing values (mean/mode)\n",
-    "df_filled = fill_missing_values(df)\n",
-    "print(\"\\nAfter Filling (Mean/Mode):\\n\", df_filled)\n",
+    "# === Function 7: Generate sample data (for demonstration) ===\n",
+    "def generate_sample_data():\n",
+    "    data = {\n",
+    "        'Name': ['Alice', 'Bob', np.nan, 'David', 'Eva'],\n",
+    "        'Age': [25, np.nan, 30, 22, np.nan],\n",
+    "        'Salary': [50000, 60000, np.nan, 45000, 52000],\n",
+    "        'Department': ['HR', 'IT', 'Finance', np.nan, 'IT']\n",
+    "    }\n",
+    "    return pd.DataFrame(data)\n",
     "\n",
-    "# 3c. Interpolation\n",
-    "df_interpolated = interpolate_missing(df)\n",
-    "print(\"\\nAfter Interpolation:\\n\", df_interpolated)\n",
     "\n",
-    "# Step 4: Save the cleaned version\n",
-    "df_filled.to_csv(\"Q11_cleaned_data.csv\", index=False)\n",
-    "print(\"\\n✅ Cleaned data saved to 'Q11_cleaned_data.csv'.\")\n"
+    "# === MAIN EXECUTION ===\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Step 1: Generate or load real data\n",
+    "    df = generate_sample_data()\n",
+    "    # df = load_data(\"your_dataset.csv\")  # Uncomment for real dataset\n",
+    "\n",
+    "    print(\"🔹 Original Data:\")\n",
+    "    print(df)\n",
+    "\n",
+    "    # Step 2: Visualize missing values\n",
+    "    visualize_missing(df)\n",
+    "\n",
+    "    # Step 3a: Drop rows with missing values\n",
+    "    df_dropped = drop_missing_rows(df)\n",
+    "    print(\"\\n🔸 After Dropping Rows:\")\n",
+    "    print(df_dropped)\n",
+    "\n",
+    "    # Step 3b: Fill with mean/mode\n",
+    "    df_filled = fill_missing_values(df)\n",
+    "    print(\"\\n🔸 After Filling (Mean/Mode):\")\n",
+    "    print(df_filled)\n",
+    "\n",
+    "    # Step 3c: Interpolation\n",
+    "    df_interpolated = interpolate_missing(df)\n",
+    "    print(\"\\n🔸 After Interpolation:\")\n",
+    "    print(df_interpolated)\n",
+    "\n",
+    "    # Step 4: Save cleaned result\n",
+    "    df_filled.to_csv(\"Q11_cleaned_data.csv\", index=False)\n",
+    "    print(\"\\n✅ Saved cleaned data to 'Q11_cleaned_data.csv'.\")\n",
+    "\n",
+    "    # Step 5 (Optional): Chunked processing\n",
+    "    # process_in_chunks(\"your_large_file.csv\", chunk_size=1000)\n",
+    "\n",
+    "    # Step 6 (Optional): Asynchronous processing\n",
+    "    # df_async = async_chunk_processing(\"your_large_file.csv\")\n",
+    "    # df_async.to_csv(\"async_cleaned.csv\", index=False)\n"
    ]
   }
  ],
