--- a/src/Module 3/Techniques to Improve Data Quality/Ques_12.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_12.ipynb
@@ -9,44 +9,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔹 Original DataFrame with Duplicates:\n",
+      "\n",
+      "    ID     Name  Age     City\n",
+      "0  101    Alice   25       NY\n",
+      "1  102      Bob   30       LA\n",
+      "2  103  Charlie   35  Chicago\n",
+      "3  104    David   40  Houston\n",
+      "4  105      Eva   28       LA\n",
+      "5  101    Alice   25       NY\n",
+      "6  103  Charlie   35  Chicago\n",
+      "\n",
+      "🔸 Duplicate Rows (full row matches):\n",
+      "    ID     Name  Age     City\n",
+      "0  101    Alice   25       NY\n",
+      "2  103  Charlie   35  Chicago\n",
+      "5  101    Alice   25       NY\n",
+      "6  103  Charlie   35  Chicago\n",
+      "\n",
+      "🔸 Number of Fully Duplicated Rows: 2\n",
+      "\n",
+      "✅ After Removing Full Duplicates:\n",
+      "    ID     Name  Age     City\n",
+      "0  101    Alice   25       NY\n",
+      "1  102      Bob   30       LA\n",
+      "2  103  Charlie   35  Chicago\n",
+      "3  104    David   40  Houston\n",
+      "4  105      Eva   28       LA\n",
+      "\n",
+      "🔸 Duplicates Based on 'ID':\n",
+      "    ID     Name  Age     City\n",
+      "0  101    Alice   25       NY\n",
+      "2  103  Charlie   35  Chicago\n",
+      "5  101    Alice   25       NY\n",
+      "6  103  Charlie   35  Chicago\n",
+      "\n",
+      "✅ Data After Dropping Redundant IDs (Keep First):\n",
+      "    ID     Name  Age     City\n",
+      "0  101    Alice   25       NY\n",
+      "1  102      Bob   30       LA\n",
+      "2  103  Charlie   35  Chicago\n",
+      "3  104    David   40  Houston\n",
+      "4  105      Eva   28       LA\n",
+      "\n",
+      "🔸 DataFrame with 'is_duplicate' flag:\n",
+      "    ID     Name  Age     City  is_duplicate\n",
+      "0  101    Alice   25       NY          True\n",
+      "1  102      Bob   30       LA         False\n",
+      "2  103  Charlie   35  Chicago          True\n",
+      "3  104    David   40  Houston         False\n",
+      "4  105      Eva   28       LA         False\n",
+      "5  101    Alice   25       NY          True\n",
+      "6  103  Charlie   35  Chicago          True\n",
+      "\n",
+      "💾 Saved cleaned file as 'Q12_cleaned_deduplicated.csv'\n"
+     ]
+    }
+   ],
    "source": [
-    "# Activity 2: Dealing with Duplicates & Redundancy\n",
+    "# Ques_12.ipynb - Dealing with Duplicates & Redundancy\n",
     "\n",
-    "# Task A: Identifying Duplicate Records\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "# 7. Identify Complete Duplicates:\n",
-    "# - Load a dataset and identify duplicated rows.\n",
-    "# - Use Pandas to detect duplicates.\n",
+    "# === Step 1: Generate Sample Data ===\n",
+    "def generate_data():\n",
+    "    data = {\n",
+    "        'ID': [101, 102, 103, 104, 105, 101, 103],\n",
+    "        'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eva', 'Alice', 'Charlie'],\n",
+    "        'Age': [25, 30, 35, 40, 28, 25, 35],\n",
+    "        'City': ['NY', 'LA', 'Chicago', 'Houston', 'LA', 'NY', 'Chicago']\n",
+    "    }\n",
+    "    return pd.DataFrame(data)\n",
     "\n",
+    "df = generate_data()\n",
+    "print(\"🔹 Original DataFrame with Duplicates:\\n\")\n",
+    "print(df)\n",
     "\n",
+    "# === Step 2: Find and Count Duplicates ===\n",
+    "print(\"\\n🔸 Duplicate Rows (full row matches):\")\n",
+    "print(df[df.duplicated(keep=False)])\n",
     "\n",
+    "print(\"\\n🔸 Number of Fully Duplicated Rows:\", df.duplicated().sum())\n",
     "\n",
+    "# === Step 3: Remove Full Row Duplicates ===\n",
+    "df_no_duplicates = df.drop_duplicates()\n",
+    "print(\"\\n✅ After Removing Full Duplicates:\")\n",
+    "print(df_no_duplicates)\n",
     "\n",
+    "# === Step 4: Identify Partial Duplicates (e.g., by 'ID') ===\n",
+    "print(\"\\n🔸 Duplicates Based on 'ID':\")\n",
+    "print(df[df.duplicated(subset=['ID'], keep=False)])\n",
     "\n",
-    "# 8. Identify Duplicates based on Specific Columns:\n",
-    "# - Check for duplicates in specified columns.\n",
+    "# === Step 5: Remove Redundancy by Keeping First Entry per ID ===\n",
+    "df_unique_by_id = df.drop_duplicates(subset=['ID'], keep='first')\n",
+    "print(\"\\n✅ Data After Dropping Redundant IDs (Keep First):\")\n",
+    "print(df_unique_by_id)\n",
     "\n",
+    "# === Step 6: Optional — Flagging Duplicate Groups ===\n",
+    "df['is_duplicate'] = df.duplicated(subset=['ID'], keep=False)\n",
+    "print(\"\\n🔸 DataFrame with 'is_duplicate' flag:\")\n",
+    "print(df)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 9. Count Duplicate Rows:\n",
-    "# - Calculate and print the number of duplicate rows.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "# === Step 7: Save cleaned data ===\n",
+    "df_unique_by_id.to_csv(\"Q12_cleaned_deduplicated.csv\", index=False)\n",
+    "print(\"\\n💾 Saved cleaned file as 'Q12_cleaned_deduplicated.csv'\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +159,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -94,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
