Added Ques_12 notebook - Handling Missing Data with imputation methods

--- a/src/Module 3/Techniques to Improve Data Quality/Ques_12.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_12.ipynb
@@ -9,16 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔹 Original DataFrame with Duplicates:\n",
-      "\n",
-      "    ID     Name  Age     City\n",
+      "🔹 Original Data:\n",
+      "     ID     Name  Age     City\n",
       "0  101    Alice   25       NY\n",
       "1  102      Bob   30       LA\n",
       "2  103  Charlie   35  Chicago\n",
@@ -26,50 +25,54 @@
       "4  105      Eva   28       LA\n",
       "5  101    Alice   25       NY\n",
       "6  103  Charlie   35  Chicago\n",
+      "7  106    Frank   33  Seattle\n",
+      "8  107    Grace   45   Boston\n",
+      "9  107    Grace   45   Boston\n",
       "\n",
-      "🔸 Duplicate Rows (full row matches):\n",
-      "    ID     Name  Age     City\n",
+      "🔸 Full Row Duplicates:\n",
+      "     ID     Name  Age     City\n",
       "0  101    Alice   25       NY\n",
       "2  103  Charlie   35  Chicago\n",
       "5  101    Alice   25       NY\n",
       "6  103  Charlie   35  Chicago\n",
+      "8  107    Grace   45   Boston\n",
+      "9  107    Grace   45   Boston\n",
       "\n",
-      "🔸 Number of Fully Duplicated Rows: 2\n",
-      "\n",
-      "✅ After Removing Full Duplicates:\n",
-      "    ID     Name  Age     City\n",
+      "✅ After Removing Full Row Duplicates:\n",
+      "     ID     Name  Age     City\n",
       "0  101    Alice   25       NY\n",
       "1  102      Bob   30       LA\n",
       "2  103  Charlie   35  Chicago\n",
       "3  104    David   40  Houston\n",
       "4  105      Eva   28       LA\n",
+      "7  106    Frank   33  Seattle\n",
+      "8  107    Grace   45   Boston\n",
       "\n",
-      "🔸 Duplicates Based on 'ID':\n",
-      "    ID     Name  Age     City\n",
-      "0  101    Alice   25       NY\n",
-      "2  103  Charlie   35  Chicago\n",
-      "5  101    Alice   25       NY\n",
-      "6  103  Charlie   35  Chicago\n",
+      "🔸 Partial Duplicates Based on 'ID':\n",
+      " Empty DataFrame\n",
+      "Columns: [ID, Name, Age, City]\n",
+      "Index: []\n",
       "\n",
-      "✅ Data After Dropping Redundant IDs (Keep First):\n",
-      "    ID     Name  Age     City\n",
+      "✅ After Removing Duplicate 'ID's (Keep First):\n",
+      "     ID     Name  Age     City\n",
       "0  101    Alice   25       NY\n",
       "1  102      Bob   30       LA\n",
       "2  103  Charlie   35  Chicago\n",
       "3  104    David   40  Houston\n",
       "4  105      Eva   28       LA\n",
+      "7  106    Frank   33  Seattle\n",
+      "8  107    Grace   45   Boston\n",
       "\n",
-      "🔸 DataFrame with 'is_duplicate' flag:\n",
-      "    ID     Name  Age     City  is_duplicate\n",
-      "0  101    Alice   25       NY          True\n",
+      "🔸 Data with 'is_duplicate' flag:\n",
+      "     ID     Name  Age     City  is_duplicate\n",
+      "0  101    Alice   25       NY         False\n",
       "1  102      Bob   30       LA         False\n",
-      "2  103  Charlie   35  Chicago          True\n",
+      "2  103  Charlie   35  Chicago         False\n",
       "3  104    David   40  Houston         False\n",
       "4  105      Eva   28       LA         False\n",
-      "5  101    Alice   25       NY          True\n",
-      "6  103  Charlie   35  Chicago          True\n",
-      "\n",
-      "💾 Saved cleaned file as 'Q12_cleaned_deduplicated.csv'\n"
+      "7  106    Frank   33  Seattle         False\n",
+      "8  107    Grace   45   Boston         False\n",
+      "✅ Cleaned data saved to: Q12_cleaned_deduplicated.csv\n"
      ]
     }
    ],
@@ -79,82 +82,106 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# === Step 1: Generate Sample Data ===\n",
-    "def generate_data():\n",
+    "# === Step 1: Generate or Load Data ===\n",
+    "def generate_sample_data():\n",
+    "    \"\"\"Generates sample data with intentional duplicates.\"\"\"\n",
     "    data = {\n",
-    "        'ID': [101, 102, 103, 104, 105, 101, 103],\n",
-    "        'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eva', 'Alice', 'Charlie'],\n",
-    "        'Age': [25, 30, 35, 40, 28, 25, 35],\n",
-    "        'City': ['NY', 'LA', 'Chicago', 'Houston', 'LA', 'NY', 'Chicago']\n",
+    "        'ID': [101, 102, 103, 104, 105, 101, 103, 106, 107, 107],\n",
+    "        'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eva', 'Alice', 'Charlie', 'Frank', 'Grace', 'Grace'],\n",
+    "        'Age': [25, 30, 35, 40, 28, 25, 35, 33, 45, 45],\n",
+    "        'City': ['NY', 'LA', 'Chicago', 'Houston', 'LA', 'NY', 'Chicago', 'Seattle', 'Boston', 'Boston']\n",
     "    }\n",
     "    return pd.DataFrame(data)\n",
     "\n",
-    "df = generate_data()\n",
-    "print(\"🔹 Original DataFrame with Duplicates:\\n\")\n",
-    "print(df)\n",
     "\n",
-    "# === Step 2: Find and Count Duplicates ===\n",
-    "print(\"\\n🔸 Duplicate Rows (full row matches):\")\n",
-    "print(df[df.duplicated(keep=False)])\n",
+    "# === Step 2: Validate Data ===\n",
+    "def validate_data(df):\n",
+    "    \"\"\"Basic sanity checks for input DataFrame.\"\"\"\n",
+    "    if df.empty:\n",
+    "        raise ValueError(\"DataFrame is empty. Please check the input source.\")\n",
+    "    if df.isnull().all().any():\n",
+    "        print(\"⚠️ Warning: Some columns have only missing values.\")\n",
+    "    if 'ID' not in df.columns:\n",
+    "        raise KeyError(\"Missing required column: 'ID'\")\n",
+    "    return True\n",
     "\n",
-    "print(\"\\n🔸 Number of Fully Duplicated Rows:\", df.duplicated().sum())\n",
     "\n",
-    "# === Step 3: Remove Full Row Duplicates ===\n",
-    "df_no_duplicates = df.drop_duplicates()\n",
-    "print(\"\\n✅ After Removing Full Duplicates:\")\n",
-    "print(df_no_duplicates)\n",
+    "# === Step 3: Identify Full Duplicates ===\n",
+    "def get_full_duplicates(df):\n",
+    "    return df[df.duplicated(keep=False)]\n",
     "\n",
-    "# === Step 4: Identify Partial Duplicates (e.g., by 'ID') ===\n",
-    "print(\"\\n🔸 Duplicates Based on 'ID':\")\n",
-    "print(df[df.duplicated(subset=['ID'], keep=False)])\n",
     "\n",
-    "# === Step 5: Remove Redundancy by Keeping First Entry per ID ===\n",
-    "df_unique_by_id = df.drop_duplicates(subset=['ID'], keep='first')\n",
-    "print(\"\\n✅ Data After Dropping Redundant IDs (Keep First):\")\n",
-    "print(df_unique_by_id)\n",
+    "# === Step 4: Remove Full Duplicates ===\n",
+    "def remove_full_duplicates(df):\n",
+    "    return df.drop_duplicates()\n",
     "\n",
-    "# === Step 6: Optional — Flagging Duplicate Groups ===\n",
-    "df['is_duplicate'] = df.duplicated(subset=['ID'], keep=False)\n",
-    "print(\"\\n🔸 DataFrame with 'is_duplicate' flag:\")\n",
-    "print(df)\n",
     "\n",
-    "# === Step 7: Save cleaned data ===\n",
-    "df_unique_by_id.to_csv(\"Q12_cleaned_deduplicated.csv\", index=False)\n",
-    "print(\"\\n💾 Saved cleaned file as 'Q12_cleaned_deduplicated.csv'\")\n"
+    "# === Step 5: Identify Partial Duplicates by Column (e.g., ID) ===\n",
+    "def get_partial_duplicates(df, subset_col):\n",
+    "    return df[df.duplicated(subset=[subset_col], keep=False)]\n",
+    "\n",
+    "\n",
+    "# === Step 6: Remove Partial Duplicates by Column (keeping first) ===\n",
+    "def drop_partial_duplicates(df, subset_col):\n",
+    "    return df.drop_duplicates(subset=[subset_col], keep='first')\n",
+    "\n",
+    "\n",
+    "# === Step 7: Flag Duplicates in a Column ===\n",
+    "def flag_duplicates(df, subset_col):\n",
+    "    df = df.copy()\n",
+    "    df['is_duplicate'] = df.duplicated(subset=[subset_col], keep=False)\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "# === Step 8: Save to CSV ===\n",
+    "def save_cleaned_data(df, path=\"Q12_cleaned_deduplicated.csv\"):\n",
+    "    df.to_csv(path, index=False)\n",
+    "    print(f\"✅ Cleaned data saved to: {path}\")\n",
+    "\n",
+    "\n",
+    "# === MAIN EXECUTION ===\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Step 1: Load Data\n",
+    "    df = generate_sample_data()\n",
+    "    print(\"🔹 Original Data:\\n\", df)\n",
+    "\n",
+    "    # Step 2: Validate\n",
+    "    try:\n",
+    "        validate_data(df)\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Validation Error: {e}\")\n",
+    "        exit(1)\n",
+    "\n",
+    "    # Step 3: Display full duplicates\n",
+    "    full_dupes = get_full_duplicates(df)\n",
+    "    print(\"\\n🔸 Full Row Duplicates:\\n\", full_dupes)\n",
+    "\n",
+    "    # Step 4: Remove full duplicates\n",
+    "    df_no_full_dupes = remove_full_duplicates(df)\n",
+    "    print(\"\\n✅ After Removing Full Row Duplicates:\\n\", df_no_full_dupes)\n",
+    "\n",
+    "    # Step 5: Show partial duplicates based on 'ID'\n",
+    "    partial_dupes = get_partial_duplicates(df_no_full_dupes, 'ID')\n",
+    "    print(\"\\n🔸 Partial Duplicates Based on 'ID':\\n\", partial_dupes)\n",
+    "\n",
+    "    # Step 6: Drop partial duplicates (keep first ID)\n",
+    "    df_unique_ids = drop_partial_duplicates(df_no_full_dupes, 'ID')\n",
+    "    print(\"\\n✅ After Removing Duplicate 'ID's (Keep First):\\n\", df_unique_ids)\n",
+    "\n",
+    "    # Step 7: Add a duplicate flag for transparency\n",
+    "    df_flagged = flag_duplicates(df_no_full_dupes, 'ID')\n",
+    "    print(\"\\n🔸 Data with 'is_duplicate' flag:\\n\", df_flagged)\n",
+    "\n",
+    "    # Step 8: Save cleaned output\n",
+    "    save_cleaned_data(df_unique_ids)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Task B: Deduplication Techniques\n",
-    "\n",
-    "# 10. Remove Complete Duplicates:\n",
-    "# - Drop duplicate rows and keep only the first occurrence.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 11. Subset Deduplication:\n",
-    "# - Remove duplicates based on a subset of columns.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 12. Keep Last Occurrence:\n",
-    "# - Drop duplicates but keep the last occurrence in the dataset.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
